src/objects/Session__c.object
<CustomObject>
    <fields>
        <fullName>Attending_Guest_Percentage__c</fullName>
        <formula>IF(Guest_Sum__c == 0,0,
  IF(Attending_Guest_Sum__c == 0,0, Attending_Guest_Sum__c / Guest_Sum__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>歩留まり</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Attending_Guest_Sum__c</fullName>
        <label>ゲスト数（出席）</label>
        <summaryFilterItems>
            <field>Guest__c.Status__c</field>
            <operation>equals</operation>
            <value>attended, submitted</value>
        </summaryFilterItems>
        <summaryForeignKey>Guest__c.Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Chatter_Email__c</fullName>
        <label>Chatter用Eメールアドレス</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>開催日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>概要</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Enable_Rate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>5段階評価を実施</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Id__c</fullName>
        <formula>Id</formula>
        <label>アンケートID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guest_Sum__c</fullName>
        <label>ゲスト数</label>
        <summaryForeignKey>Guest__c.Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Handout_Password__c</fullName>
        <label>資料開封パスワード</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handout_URL__c</fullName>
        <label>資料ダウンロードURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Hash_Tag__c</fullName>
        <label>ハッシュタグ</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Label_For_Rate__c</fullName>
        <label>5段階評価のラベル</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Body_L__c</fullName>
        <label>メール 本文</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mail_Body__c</fullName>
        <label>deprecated メール 本文</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mail_Guest_Pass_Body_L__c</fullName>
        <label>受講票配信メール 本文</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mail_Guest_Pass_Body__c</fullName>
        <label>deprecated 受講票配信メール 本文</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mail_Guest_Pass_Sender__c</fullName>
        <defaultValue>$User.Email</defaultValue>
        <label>受講票配信メール 送信元</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mail_Guest_Pass_Subject__c</fullName>
        <defaultValue>$Label.subject_for_mail_guest_pass</defaultValue>
        <label>受講票配信メール 件名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Guest_Pass_To__c</fullName>
        <label>受講票配信メール 配信先</label>
        <picklist>
            <picklistValues>
                <fullName>anyone</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mail_Handout_Body_L__c</fullName>
        <label>資料配信メール 本文</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mail_Handout_Body__c</fullName>
        <label>deprecatred 資料配信メール 本文</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mail_Handout_Send_On_Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>資料配信メールをアンケート提出後に自動配信</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mail_Handout_Sender__c</fullName>
        <defaultValue>$User.Email</defaultValue>
        <label>資料配信メール 送信元</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mail_Handout_Subject__c</fullName>
        <defaultValue>$Label.subject_for_mail_handout</defaultValue>
        <label>資料配信メール 件名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Handout_To__c</fullName>
        <label>資料配信メール 配信先</label>
        <picklist>
            <picklistValues>
                <fullName>anyone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>attendees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>who_have_submitted_survey</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mail_Sender__c</fullName>
        <defaultValue>$User.Email</defaultValue>
        <label>メール 送信元</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mail_Subject__c</fullName>
        <label>メール 件名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Survey_Link_Body_L__c</fullName>
        <label>アンケートリンク配信メール 本文</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mail_Survey_Link_Body__c</fullName>
        <label>deprecated アンケートリンク配信メール 本文</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mail_Survey_Link_Sender__c</fullName>
        <defaultValue>$User.Email</defaultValue>
        <label>アンケートリンク配信メール 送信元</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mail_Survey_Link_Subject__c</fullName>
        <defaultValue>$Label.subject_for_mail_survey_link</defaultValue>
        <label>アンケートリンク配信メール 件名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Survey_Link_To__c</fullName>
        <label>アンケートリンク配信メール 配信先</label>
        <picklist>
            <picklistValues>
                <fullName>anyone</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>attendees</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mail_To__c</fullName>
        <label>メール 配信先</label>
        <picklist>
            <picklistValues>
                <fullName>anyone</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>attendees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>who_have_submitted_survey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mass_Mail_Additional_Body__c</fullName>
        <label>Deprecated メール本文(HTML)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mass_Mail_Sender__c</fullName>
        <label>Deprecated メール送信元アドレス</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mass_Mail_Title__c</fullName>
        <label>Deprecated メール題名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open__c</fullName>
        <defaultValue>true</defaultValue>
        <label>オープン</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_Comment_To_Session_Record_Feed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>チェックするとゲストが入力したコメントがアンケートのレコードフィードに投稿されます。投稿者はすごいアンケートをを組織にインストールした管理者になります。</inlineHelpText>
        <label>アンケートのレコードフィードにコメントを投稿</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_To_Account_Record_Feed__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>チェックすると、ゲストが登録された時またはアンケートを回答した時に、そのゲストに該当する取引先レコードがあれば、そのレコードフィードに活動が投稿されます。</inlineHelpText>
        <label>取引先のレコードフィードにゲストの活動を投稿</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_To_Contact_Record_Feed__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>チェックすると、ゲストが登録された時またはアンケートを回答した時に、そのゲストに該当する取引先責任者レコードがあれば、そのレコードフィードに活動が投稿されます。</inlineHelpText>
        <label>取引先責任者のレコードフィードにゲストの活動を投稿</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Presenter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>プレゼンター</label>
        <referenceTo>Presenter__c</referenceTo>
        <relationshipName>Session</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_1__c</fullName>
        <label>Rate 1</label>
        <summaryFilterItems>
            <field>Survey__c.Rate__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Survey__c.Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rate_2__c</fullName>
        <label>Rate 2</label>
        <summaryFilterItems>
            <field>Survey__c.Rate__c</field>
            <operation>equals</operation>
            <value>2</value>
        </summaryFilterItems>
        <summaryForeignKey>Survey__c.Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rate_3__c</fullName>
        <label>Rate 3</label>
        <summaryFilterItems>
            <field>Survey__c.Rate__c</field>
            <operation>equals</operation>
            <value>3</value>
        </summaryFilterItems>
        <summaryForeignKey>Survey__c.Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rate_Avg__c</fullName>
        <formula>IF ( Rate_Count__c  &lt;&gt; 0 &amp;&amp; Rate_Sum__c &lt;&gt; 0, ROUND(Rate_Sum__c / Rate_Count__c, 2), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>評価平均</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_Count__c</fullName>
        <label>評価数</label>
        <summaryFilterItems>
            <field>Survey__c.Rate__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Survey__c.Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rate_Sum__c</fullName>
        <label>評価合計</label>
        <summarizedField>Survey__c.Rate__c</summarizedField>
        <summaryForeignKey>Survey__c.Session__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Report_Public__c</fullName>
        <defaultValue>false</defaultValue>
        <label>レポートを公開する</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Mail_On_Submittion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>deprecated アンケート提出後に自動送信</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Collection_Rate__c</fullName>
        <formula>IF((Survey_Sum__c != 0) &amp;&amp; (Guest_Sum__c != 0), Survey_Sum__c  / Guest_Sum__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>アンケート回答率</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Survey_Sum__c</fullName>
        <label>アンケート回答数</label>
        <summaryForeignKey>Survey__c.Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Who_Can_Get_Handout__c</fullName>
        <label>deprecated メールを配信される人</label>
        <picklist>
            <picklistValues>
                <fullName>全員</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>出席者</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>アンケートの入力が必要</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Who_Can_Submit_Survey__c</fullName>
        <label>アンケートを入力できる人</label>
        <picklist>
            <picklistValues>
                <fullName>無条件</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eメールの入力が必要</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>事前登録者のみ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>すごいアンケート</label>
    <nameField>
        <label>アンケートタイトル</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>